Fixed curly bracket spacing

--- a/source/themes/custom/gearwrench/styles/libraries/node/full--product-category.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/full--product-category.scss
@@ -126,7 +126,8 @@
           display: flex;
           height: 3rem;
           justify-content: space-between;
-          padding-right: 1.5rem;        }
+          padding-right: 1.5rem;
+        }
 
         .mobile-close-icon {
           height: 2rem;
